Bug 47168 - xf86-input-synaptics master fails to build: redefinition of typedef 'SynapticsPrivate'
Summary: xf86-input-synaptics master fails to build: redefinition of typedef 'Synaptic...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/synaptics (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Peter Hutterer
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-09 15:42 UTC by Chí-Thanh Christopher Nguyễn
Modified: 2012-03-12 23:23 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
build.log (12.56 KB, text/plain)
2012-03-09 15:42 UTC, Chí-Thanh Christopher Nguyễn
no flags Details

Description Chí-Thanh Christopher Nguyễn 2012-03-09 15:42:58 UTC
Created attachment 58256 [details]
build.log

First bad commit:

From c34cf307f9982b62c6e6dfa2687e1b16f527f2a4 Mon Sep 17 00:00:00 2001
From: Chase Douglas <chase.douglas@canonical.com>
Date: Tue, 07 Feb 2012 23:14:05 +0000
Subject: Introduce SynapticsHwStateAlloc() and SynapticsHwStateFree()

Put them in a new file so eventcomm-test can access them.


In file included from /var/tmp/portage/x11-drivers/xf86-input-synaptics-9999/work/xf86-input-synaptics-9999/src/synproto.c:32:0:
/var/tmp/portage/x11-drivers/xf86-input-synaptics-9999/work/xf86-input-synaptics-9999/src/synapticsstr.h:289:3: error: redefinition of typedef 'SynapticsPrivate'
/var/tmp/portage/x11-drivers/xf86-input-synaptics-9999/work/xf86-input-synaptics-9999/src/synproto.h:38:37: note: previous declaration of 'SynapticsPrivate' was here
Comment 1 Peter Hutterer 2012-03-12 23:23:21 UTC
commit 90d6633d11aa3691b6b39df3931a4024b832eb05
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Mon Mar 12 09:45:05 2012 +1000

    Fix build error - duplicate typedef (#47168)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.