Fix build error - duplicate typedef (#47168)

Introduced in c34cf307f9982b62c6e6dfa2687e1b16f527f2a4.
synapticsstr.h includes synproto.h, which now contains the typedef.

X.Org Bug 47168 <http://bugs.freedesktop.org/show_bug.cgi?id=47168>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
Reviewed-by: Chase Douglas <chase.douglas@canonical.com>